--- a/.github/workflows/update_vawf.yaml
+++ b/.github/workflows/update_vawf.yaml
@@ -12,12 +12,26 @@ jobs:
 
     steps:
     - name: Checkout source repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         repository: nbarjun/vawf
         token: ${{ secrets.VAWF_TOKEN }}
         path: vawf
-        
+
+    # Cache pip packages
+    - name: Cache pip
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+          
+    - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
     - name: Run feature detection algorithms
       run: |
         cd vawf
