--- a/.github/workflows/update_vawf.yaml
+++ b/.github/workflows/update_vawf.yaml
@@ -29,6 +29,7 @@ jobs:
           
     - name: Install dependencies
       run: |
+        cd vawf
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
